--- a/src/my-about.html
+++ b/src/my-about.html
@@ -18,11 +18,12 @@
             }
         </style>
 
-        <h1>About</h1>
+        <h1>Az oldalról</h1>
         <div class="card">
             <p>
                 Ez a weboldal a
-                <a href="https://github.com/lezsakdomi/elte-mester-data">lezsakdomi/elte-mester-data</a> GitHub
+                <a href="https://github.com/lezsakdomi/elte-mester-data">lezsakdomi/elte-mester-data</a>
+                GitHub
                 repository-hoz készült, ami egy publikusan elérhető tükör a
                 <a href="http://mester.inf.elte.hu">Mester online feladatbank</a>hoz.
             </p>
@@ -42,23 +43,26 @@
                 <li>
                     Az <a href="https://github.com/lezsakdomi/elte-mester-crawler">elte-mester-crawler</a>
                     segítségével az ott található adatokat bárki automatizáltan le tudja tölteni.
-                    <a href="https://github.com/lezsakdomi/">lezsakdomi</a> (terve szerint) redszeresen letölti
-                    az adatokat a <a href="https://github.com/lezsakdomi/elte-mester-crawler">elte-mester-crawler</a>en
+                    <a href="https://github.com/lezsakdomi/">lezsakdomi</a> (terve szerint)
+                    rendszeresen letölti az adatokat a <a
+                        href="https://github.com/lezsakdomi/elte-mester-crawler">elte-mester-crawler</a>en
                     található szkript lefuttatásával, majd feltölti azokat az
-                    <a href="https://github.com/lezsakdomi/elte-mester-data">elte-mester-data repository</a>ba.
+                    <a href="https://github.com/lezsakdomi/elte-mester-data">elte-mester-data
+                        repository</a>ba.
                 </li>
                 <li>
                     Ez a weboldal az adatokat (vagy egy részüket) a
                     <a href="https://github.com/lezsakdomi/elte-mester-data">repository</a>ból a
-                    <a href="https://rawgit.com">RawGit</a> CDN-én keresztül (ez beállítással felülbírálható) betölti a
+                    <a href="https://rawgit.com">RawGit</a> CDN-én keresztül (ez beállítással
+                    felülbírálható) betölti a
                     böngésző memóriájába.
                 </li>
                 <li>
                     A betöltött adatokat Ön mint felhasználó számára a weboldal megjeleníti<br>
                     <small>
                         (Megjegyzés: Az itt felkínált letöltési linkek az
-                        <a href="https://github.com/lezsakdomi/elte-mester-data">elte-mester-data</a> githubos
-                        felületére mutatnak.
+                        <a href="https://github.com/lezsakdomi/elte-mester-data">elte-mester-data</a>
+                        GitHub-os felületére mutatnak.
                         [<a href="https://github.com/lezsakdomi/elte-mester-data/master/flist.tsv">példa</a>])
                     </small>
                 </li>
@@ -71,7 +75,8 @@
             </p>
             <ul>
                 <li>
-                    Hibák, elírások a feladatokban: mester.inf.elte.hu
+                    Hibák, elírások a feladatokban: <a
+                        href="mailto:zsako@caesar.elte.hu">email-ben</a>
                 </li>
                 <li>
                     <a href="https://github.com/lezsakdomi/elte-mester-crawler/issues">
@@ -80,7 +85,8 @@
                 </li>
                 <li>
                     <a href="https://github.com/lezsakdomi/elte-mester-data/issues">
-                        Hibák bejelentése az itt megjelnített adatok helyességével, elavultságával kapcsolatban
+                        Hibák bejelentése az itt megjelenített adatok helyességével, elavultságával
+                        kapcsolatban
                     </a>
                 </li>
                 <li>
@@ -113,7 +119,9 @@
 
     <script>
         class MyAbout extends Polymer.Element {
-            static get is() { return 'my-about'; }
+            static get is() {
+                return 'my-about';
+            }
         }
 
         window.customElements.define(MyAbout.is, MyAbout);
