--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -13,6 +13,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- shared styles for all views -->
 <dom-module id="shared-styles">
     <template>
+        <!--suppress CssUnusedSymbol -->
         <style>
             .card, paper-card {
                 margin: 24px;
