Use a preferences global const Proxy

--- a/src/my-search.html
+++ b/src/my-search.html
@@ -204,7 +204,7 @@
                         type: Number,
                         notify: true,
                         value: function () {
-                            return searchLimit;
+                            return preferences.searchLimit;
                         }
                     },
                     '_results': {
