Implement settings page
Should fix #5

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -94,6 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                role="navigation">
                     <a name="browse" href="#browse">Böngészés</a>
                     <a name="search" href="#search">Keresés</a>
+                    <a name="settings" href="#settings">Beállítások</a>
                     <a name="about" href="#about">Az oldalról</a>
                     <a href="http://mester.inf.elte.hu/">
                         <iron-icon icon="exit-to-app"></iron-icon>
@@ -125,6 +126,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         role="main">
                     <my-browse name="browse"></my-browse>
                     <my-search name="search"></my-search>
+                    <my-settings name="settings"></my-settings>
                     <my-about name="about"></my-about>
                     <my-debug name="debug"></my-debug>
                     <my-view404 name="view404"></my-view404>
